Fixed mainmenu check box overflow issues

--- a/styles.css
+++ b/styles.css
@@ -521,6 +521,7 @@ body {
   overflow-y:scroll;
   height: 85%;
   padding-left: 5%;
+  padding-right: 5%;
   padding-top: 0;
   list-style: none;
   width: auto;
@@ -540,7 +541,7 @@ body {
   float: left;
   margin: 5px;
   padding: 15px 0px 15px 30px;
-  width: 94%;
+  width: 100%;
   height: 15%;
   border-style: solid;
   border-color: white;
@@ -707,7 +708,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   font-size: large;
-  grid-area: ffooter;
+  grid-area: footer;
 }
 
 .footerCart a{
@@ -718,8 +719,6 @@ body {
   text-decoration: none;
 
 }
-
-
 
 
 p {
